instructions.Instructions.scala.error
Compilation error:
Instructions:17: error: identifier expected but '}' found.
	}
        ^